<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.lmig.libertyconnect</groupId>
	<artifactId>sms-stack</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<cdk.version>1.152.0</cdk.version>

		<!-- Junit -->
		<junit.version>5.7.1</junit.version>

		<!-- Misc -->
		<spotless.version>2.21.0</spotless.version>
		<lombok.version>1.18.8</lombok.version>
		<jcommander.version>1.78</jcommander.version>
	</properties>

	<dependencies>
		<!-- AWS Cloud Development Kit -->
		<dependency>
			<groupId>software.amazon.awscdk</groupId>
			<artifactId>core</artifactId>
			<version>${cdk.version}</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awscdk</groupId>
			<artifactId>sqs</artifactId>
			<version>${cdk.version}</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awscdk</groupId>
			<artifactId>stepfunctions</artifactId>
			<version>${cdk.version}</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awscdk</groupId>
			<artifactId>stepfunctions-tasks</artifactId>
			<version>${cdk.version}</version>
		</dependency>
<!-- 		<dependency>
			<groupId>software.amazon.awscdk</groupId>
			<artifactId>lambda</artifactId>
			<version>${cdk.version}</version>
		</dependency> -->
		<dependency>
			<groupId>software.amazon.awscdk</groupId>
			<artifactId>s3</artifactId>
			<version>${cdk.version}</version>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk</artifactId>
			<version>1.11.163</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awscdk</groupId>
			<artifactId>lambda-event-sources</artifactId>
			<version>${cdk.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>
		<dependency>
			<groupId>com.beust</groupId>
			<artifactId>jcommander</artifactId>
			<version>${jcommander.version}</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<mainClass>com.lmig.libertyconnect.sms.stack.LcSmsStackApp</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.lmig.libertyconnect.sms.stack.LcSmsStackApp</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>${spotless.version}</version>
			</plugin>
		</plugins>
	</build>
</project>
